# InverseRendering

./: CMakeLists.txt  FaceCapture.kdev4  README.md  common.h  cook_torrance.cpp  cook_torrance.h  data_loader.cpp  data_loader.h  global.h  headers.h  main.cpp  median_cut.cpp  median_cut.h  render.h  render_utils.cpp  render_utils.h  spherical_harmonics.cpp  spherical_harmonics.h  test_ceres.cpp  utils.h  visualizer.cpp  visualizer.h  voronoi.cpp
.kdev4/: FaceCapture.kdev4
imgs/: 1-b.pgm
maya_render/: cam.txt  model.ply
maya_render/Image/: cam.xml
maya_render/env_map/: b.hdr  env-log.hdr
unit_test/: test_ceres.cpp  test_sh.cpp
